testsuite/tests/checks/incomplete_rep_spec/test.out
rep.ads:2:9: error: record type with incomplete representation specification
2 |    type Rec is record  --  FLAG
  |         ^^^ 

